--- a/style-producto.css
+++ b/style-producto.css
@@ -6,9 +6,14 @@
     padding-bottom: 40px;
 }
 
+.producto {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .producto-container {
-    height: 900px;
-    width: 80%;
+    width: 70%;
     display: inline-flex;
 }
 
@@ -24,13 +29,15 @@
     width: 90%;
     height: auto;
     margin-top: 40px;
+    margin-bottom: 40px;
     border-radius: 20px;
 }
 
 .contenedor-comprar {
     width: 50%;
     height: auto;
-    padding-top: 40px;
+    margin-top: 40px;
+    margin-bottom: 40px;
     display: flex;
     justify-content: center;
 }
@@ -46,4 +53,17 @@
 .contenedor-comprar-opciones > p{
     color: white;
     font-size: 2em;
+    border-top: 1px solid rgba(255, 255, 255, 0.171);
+    padding-top: 20px;
+}
+
+.contenedor-comprar-avisos {
+    display: flex;
+    flex-direction: column;
+    border-top: 1px solid rgba(255, 255, 255, 0.171);
+    padding-top: 20px;
+}
+
+.contenedor-comprar-avisos > p {
+    color: green;
 }
