--- a/style-carrito.css
+++ b/style-carrito.css
@@ -38,60 +38,53 @@
     width: 7rem;
 }
 
-/* ------------------------------------------------------------ Estilos botones tipo envio ------------------------------------------------------------ */
-:focus {
-    outline: 0;
-    border-color: #2260ff;
-    box-shadow: 0 0 0 4px #b5c9fc;
+.detalles-envio {
+    margin-top: 2rem;
 }
 
-.mydict div {
+.codigo-postal {
+    background-color:#151F2E;
+    color: aqua;
+    border-color: #10002B;
+}
+
+.rdbtn-formas-pago {
+    color: white;
+}
+
+.label-precio-final {
+    text-align: start;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+
+.boton-comprar {
     display: flex;
-    flex-wrap: wrap;
+    justify-content: end;
     margin-top: 0.5rem;
-    justify-content: center;
+    margin-bottom: 0.5rem;
 }
 
-.mydict input[type="radio"] {
-    clip: rect(0 0 0 0);
-    clip-path: inset(100%);
-    height: 1px;
-    overflow: hidden;
-    position: absolute;
-    white-space: nowrap;
-    width: 1px;
+.boton-comprar > btn {
+    width: 50px;
 }
 
-.mydict input[type="radio"]:checked + span {
-    box-shadow: 0 0 0 0.0625em #0043ed;
-    background-color: #dee7ff;
-    z-index: 1;
-    color: #0043ed;
+/* ------------------------------------------------------------ Estilos botones tipo envio ------------------------------------------------------------ */
+.tipo-envio {
+    text-align: end;
+    color: aqua;
 }
 
-label span {
-    display: block;
-    cursor: pointer;
-    background-color: #fff;
-    padding: 0.375em .75em;
-    position: relative;
-    margin-left: .0625em;
-    box-shadow: 0 0 0 0.0625em #b5bfd9;
-    letter-spacing: .05em;
-    color: #3e4963;
-    text-align: center;
-    transition: background-color .5s ease;
-}
-
-label:first-child span {
-    border-radius: .375em 0 0 .375em;
-}
-
-label:last-child span {
-    border-radius: 0 .375em .375em 0;
+.btn-tipo-envio {
+    color: white;
 }
   
 /* ------------------------------------------------------------ Estilos animacion camion ------------------------------------------------------------ */
+.contenedor-camion {
+    display: flex;
+    justify-content: end;
+}
+
 .loader {
     width: fit-content;
     height: fit-content;
