--- a/style.css
+++ b/style.css
@@ -51,7 +51,17 @@ body {
 }
 
 .card-producto {
+    display: flex;
     text-decoration: none;
+}
+
+.card {
+    height: 100%;
+}
+
+.card>img {
+    aspect-ratio: 4/4;
+    object-fit: cover;
 }
 
 /* Nuestra ubicacion */
@@ -121,7 +131,8 @@ body {
 .botones-redes-footer {
     display: flex;
     text-align: end;
-    align-items: center; /* Centra los elementos horizontalmente */
+    align-items: center;
+    /* Centra los elementos horizontalmente */
     justify-content: end;
 }
 
@@ -131,7 +142,8 @@ body {
 
 .boton-volver {
     display: flex;
-    align-items: center; /* Centra los elementos horizontalmente */
+    align-items: center;
+    /* Centra los elementos horizontalmente */
     justify-content: center;
 }
 
@@ -140,6 +152,8 @@ body {
 }
 
 .hr-divisoria {
-    border-top: 2px solid aqua; /* Cambia #000 por el color que desees */
-    margin: 15px 0; /* Opcional: para añadir un margen */
+    border-top: 2px solid aqua;
+    /* Cambia #000 por el color que desees */
+    margin: 15px 0;
+    /* Opcional: para añadir un margen */
 }
