--- a/style-boton.css
+++ b/style-boton.css
@@ -290,50 +290,66 @@
 }
 
 /* ------------------------------------------------------------ Estilos boton eliminar carrito ------------------------------------------------------------ */
-.button-eliminar {
-  width: 35px;
-  height: 35px;
+.delete-button {
+  width: 40px;
+  height: 40px;
   border-radius: 50%;
-  background-color: rgb(20, 20, 20);
+  background-color: #10002B;
   border: none;
   font-weight: 600;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.164);
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.164);
   cursor: pointer;
   transition-duration: 0.3s;
   overflow: hidden;
   position: relative;
-  gap: 2px;
-  margin-left: auto;
-  margin-right: 15px;
 }
 
-.svgIcon {
-  width: 12px;
+.delete-svgIcon {
+  width: 15px;
   transition-duration: 0.3s;
 }
 
-.svgIcon path {
+.delete-svgIcon path {
   fill: white;
 }
 
-.button-eliminar:hover {
+.delete-button:hover {
+  width: 90px;
+  border-radius: 50px;
   transition-duration: 0.3s;
   background-color: rgb(255, 69, 69);
   align-items: center;
-  gap: 0;
 }
 
-.bin-top {
-  transform-origin: bottom right;
+.delete-button:hover .delete-svgIcon {
+  width: 20px;
+  transition-duration: 0.3s;
+  transform: translateY(60%);
+  -webkit-transform: rotate(360deg);
+  -moz-transform: rotate(360deg);
+  -o-transform: rotate(360deg);
+  -ms-transform: rotate(360deg);
+  transform: rotate(360deg);
 }
 
-.button-eliminar:hover .bin-top {
-  transition-duration: 0.5s;
-  transform: rotate(160deg);
+.delete-button::before {
+  display: none;
+  content: "Delete";
+  color: white;
+  transition-duration: 0.3s;
+  font-size: 2px;
+}
+
+.delete-button:hover::before {
+  display: block;
+  padding-right: 10px;
+  font-size: 13px;
+  opacity: 1;
+  transform: translateY(0px);
+  transition-duration: 0.3s;
 }
 
 /* ------------------------------------------------------------ Estilos boton Volver Arriba ------------------------------------------------------------ */
